Improved resources selection when both resources names + capabilities are provided: select first resources by name, then by (capabilities+quantity) Only one variable name for storing locked resources in free style job Add pipeline DSL syntax "lock(..., variable: 'MY_NAME')" with the same behavior as for free style job Allow both space-separated and comma-separated lists for resources names + capabilities (more coherent with the returned env. variable) Fix possible bug when locking pipeline/DSL: lock try or queue done atomically in function lockOrQueueForLater() Jelly files cleanup